# open-ai-sdk

./: Readme.md
openai-sdk-project/: pyproject.toml
openai-sdk-project/src/openai_sdk_project/: main.py
weather-agent/: .env  pyproject.toml
weather-agent/src/openai_sdk_project/: __init__.py  main.py
